# blitzy-openssl

./: .gitignore  .gitmodules  ARCHITECTURE.md  BENCHMARK_REPORT.md  CONFIG_PROPAGATION_AUDIT.md  Cargo.toml  DECISION_LOG.md  FEATURE_PARITY.md  GATE_COMPLIANCE.md  README.md  TRACEABILITY.md  UNSAFE_AUDIT.md  catalog-info.yaml  clippy.toml  deny.toml  executive_summary.html  mkdocs.yml  rust-toolchain.toml
crates/openssl-cli/: Cargo.toml
crates/openssl-cli/src/: main.rs
crates/openssl-cli/src/commands/: asn1parse.rs  ca.rs  ciphers.rs  cmp.rs  cms.rs  configutl.rs  crl.rs  crl2pkcs7.rs  dgst.rs  dhparam.rs  dsa.rs  dsaparam.rs  ec.rs  ech.rs  ecparam.rs  enc.rs  errstr.rs  fipsinstall.rs  gendsa.rs  genpkey.rs  genrsa.rs  info.rs  kdf.rs  list.rs  mac.rs  mod.rs  nseq.rs  ocsp.rs  passwd.rs  pkcs12.rs  pkcs7.rs  pkcs8.rs  pkey.rs  pkeyparam.rs  pkeyutl.rs  prime.rs  rand.rs  rehash.rs  req.rs  rsa.rs  (+15 more)
crates/openssl-cli/src/lib/: http.rs  mod.rs  opts.rs  password.rs
crates/openssl-cli/src/tests/: callback_tests.rs  crypto_tests.rs  dispatch_tests.rs  error_tests.rs  fips_tests.rs  help_tests.rs  introspection_tests.rs  mod.rs  pki_tests.rs  provider_tests.rs  tls_tests.rs
crates/openssl-cli/src/tests/snapshots/: openssl__tests__help_tests__help_ca.snap  openssl__tests__help_tests__help_dgst.snap  openssl__tests__help_tests__help_enc.snap  openssl__tests__help_tests__help_genpkey.snap  openssl__tests__help_tests__help_list.snap  openssl__tests__help_tests__help_rand.snap  openssl__tests__help_tests__help_req.snap  openssl__tests__help_tests__help_s_client.snap  openssl__tests__help_tests__help_version.snap  openssl__tests__help_tests__help_x509.snap  openssl__tests__help_tests__top_level_help.snap
crates/openssl-common/: Cargo.toml
crates/openssl-common/src/: config.rs  constant_time.rs  error.rs  lib.rs  mem.rs  observability.rs  param.rs  safe_math.rs  time.rs  types.rs
crates/openssl-common/src/tests/: config_tests.rs  constant_time_tests.rs  error_tests.rs  mem_tests.rs  mod.rs  observability_tests.rs  param_tests.rs  safe_math_tests.rs  time_tests.rs  types_tests.rs
crates/openssl-crypto/: Cargo.toml
crates/openssl-crypto/benches/: crypto_bench.rs
crates/openssl-crypto/src/: cmp.rs  context.rs  cpu_detect.rs  ct.rs  dh.rs  dsa.rs  hpke.rs  init.rs  kdf.rs  lib.rs  mac.rs  ocsp.rs  pem.rs  rand.rs  thread.rs  ts.rs
crates/openssl-crypto/src/asn1/: mod.rs  template.rs
crates/openssl-crypto/src/bio/: file.rs  filter.rs  mem.rs  mod.rs  socket.rs
crates/openssl-crypto/src/bn/: arithmetic.rs  mod.rs  montgomery.rs  prime.rs
crates/openssl-crypto/src/ec/: curve25519.rs  ecdh.rs  ecdsa.rs  mod.rs
crates/openssl-crypto/src/evp/: cipher.rs  encode_decode.rs  kdf.rs  kem.rs  keymgmt.rs  mac.rs  md.rs  mod.rs  pkey.rs  rand.rs  signature.rs
crates/openssl-crypto/src/hash/: legacy.rs  md5.rs  mod.rs  sha.rs
crates/openssl-crypto/src/modes/: cbc.rs  ccm.rs  cfb.rs  ctr.rs  ecb.rs  gcm.rs  mod.rs  ofb.rs  siv.rs  xts.rs
crates/openssl-crypto/src/pqc/: lms.rs  ml_dsa.rs  ml_kem.rs  mod.rs  slh_dsa.rs
crates/openssl-crypto/src/provider/: core.rs  mod.rs  predefined.rs  property.rs
crates/openssl-crypto/src/rsa/: mod.rs  oaep.rs  pss.rs
crates/openssl-crypto/src/symmetric/: aes.rs  chacha20.rs  des.rs  legacy.rs  mod.rs
crates/openssl-crypto/src/tests/: mod.rs  test_asn1.rs  test_bio.rs  test_bn.rs  test_cmp.rs  test_context.rs  test_cpu_detect.rs  test_ct.rs  test_dh.rs  test_dsa.rs  test_ec.rs  test_evp.rs  test_hash.rs  test_hpke.rs  test_init.rs  test_kdf.rs  test_mac.rs  test_ocsp.rs  test_pem.rs  test_pkcs.rs  test_pqc.rs  test_provider.rs  test_rand.rs  test_rsa.rs  test_symmetric.rs  test_thread.rs  test_ts.rs  test_x509.rs
crates/openssl-crypto/src/tests/snapshots/: openssl_crypto__tests__test_asn1__integer_12345_der_hex.snap  openssl_crypto__tests__test_asn1__well_known_oid_der_hex.snap  openssl_crypto__tests__test_asn1__x509_dn_common_name_example_der_hex.snap  openssl_crypto__tests__test_pem__pem_certificate_format.snap  openssl_crypto__tests__test_pem__pem_private_key_format.snap
crates/openssl-crypto/src/x509/: certificate.rs  crl.rs  mod.rs  store.rs  verify.rs
crates/openssl-ffi/: Cargo.toml  build.rs  cbindgen.toml
crates/openssl-ffi/src/: bio.rs  crypto.rs  evp.rs  lib.rs
crates/openssl-fips/: Cargo.toml
crates/openssl-fips/src/: indicator.rs  kats.rs  lib.rs  provider.rs  self_test.rs  state.rs
crates/openssl-fips/src/tests/: indicator_tests.rs  integration_tests.rs  kats_tests.rs  mod.rs  provider_tests.rs  self_test_tests.rs  state_tests.rs
crates/openssl-provider/: Cargo.toml
crates/openssl-provider/benches/: provider_bench.rs
crates/openssl-provider/src/: base.rs  default.rs  dispatch.rs  legacy.rs  lib.rs  null.rs  traits.rs
crates/openssl-provider/src/implementations/: mod.rs
crates/openssl-provider/src/implementations/ciphers/: aes.rs  aes_cbc_hmac.rs  aes_ccm.rs  aes_gcm.rs  aes_ocb.rs  aes_siv.rs  aes_wrap.rs  aes_xts.rs  aria.rs  camellia.rs  chacha20.rs  common.rs  des.rs  legacy.rs  mod.rs  null.rs  sm4.rs
crates/openssl-provider/src/implementations/digests/: blake2.rs  common.rs  legacy.rs  md5.rs  ml_dsa_mu.rs  mod.rs  null.rs  ripemd.rs  sha1.rs  sha2.rs  sha3.rs  sm3.rs
crates/openssl-provider/src/implementations/encode_decode/: blob_encoder.rs  common.rs  der_decoder.rs  epki_decoder.rs  key_encoder.rs  lms_decoder.rs  mod.rs  ms_encoder.rs  msblob_decoder.rs  pem_decoder.rs  (+4 more)
crates/openssl-provider/src/tests/: cross_provider.rs  mod.rs  test_algorithm_correctness.rs  test_base_provider.rs  test_default_provider.rs  test_dispatch.rs  test_legacy_provider.rs  test_null_provider.rs  test_provider_lifecycle.rs
crates/openssl-ssl/: Cargo.toml
crates/openssl-ssl/benches/: handshake_bench.rs
crates/openssl-ssl/src/: cipher.rs  lib.rs  method.rs  srtp.rs  tls13.rs
crates/openssl-ssl/src/quic/: ack.rs  cc.rs  mod.rs  reactor.rs  stream.rs
crates/openssl-ssl/src/record/: dtls.rs  lucky13.rs  mod.rs  tls.rs
crates/openssl-ssl/src/tests/: mod.rs  quic_integration.rs  tls_integration.rs
(+77 files in other folders)
