[package]
name = "openssl-common"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared foundation types, error handling, config, and observability for the OpenSSL Rust workspace"

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
metrics = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
zeroize = { workspace = true }
subtle = { workspace = true }
once_cell = { workspace = true }
uuid = { workspace = true }
bitflags = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
test-log = { workspace = true }

[lints]
workspace = true
